--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -74,22 +74,22 @@ import Icon from "./Icon.astro";
     position: sticky;
     top: 0;
     z-index: 1000;
-    padding-inline-start: var(--space-xs);
-    padding-inline-end: var(--space-xs);
+    padding-inline-start: var(--space-m);
+    padding-inline-end: var(--space-m);
   }
 
   .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: var(--space-xs) 0;
+    padding: var(--space-s) 0;
   }
 
   nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: var(--space-xs);
+    gap: var(--space-s);
   }
 
   .wordmark {
@@ -105,11 +105,11 @@ import Icon from "./Icon.astro";
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: var(--space-3xs);
+    gap: var(--space-2xs);
     background: var(--violet-3);
     line-height: 1;
-    padding-block: var(--space-3xs);
-    padding-inline: var(--space-2xs) var(--space-xs);
+    padding-block: var(--space-xs);
+    padding-inline: var(--space-xs) var(--space-m);
     border-radius: var(--radius-full);
     border: none;
 
