--- a/src/pages/cover/[slug].astro
+++ b/src/pages/cover/[slug].astro
@@ -155,7 +155,7 @@ const formattedDate = dayjs(created_at).format("MMMM D, YYYY");
     flex-direction: column;
     align-items: center;
     text-align: center;
-    gap: var(--space-s);
+    gap: var(--space-m);
     text-wrap: balance;
   }
 
@@ -169,7 +169,8 @@ const formattedDate = dayjs(created_at).format("MMMM D, YYYY");
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: var(--space-2xs);
+    gap: var(--space-s);
+    margin-block-start: var(--space-s);
   }
 
   .compare {
