--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -15,7 +15,8 @@ const { text } = Astro.props;
     display: inline-block;
     background: var(--violet-3);
     color: var(--violet-11);
-    padding-inline: var(--space-2xs);
+    padding-block: var(--space-2xs);
+    padding-inline: var(--space-m);
     border-radius: var(--radius-full);
     font-size: var(--step-0);
   }
