--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,6 +42,10 @@ const { data } = await supabase
     }
   }
 
+  header {
+    text-wrap: balance;
+  }
+
   .covers-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
