--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,5 +50,6 @@ const { data } = await supabase
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: var(--space-xl);
+    row-gap: var(--space-3xl);
   }
 </style>
