--- a/src/components/SubmitForm/steps.module.scss
+++ b/src/components/SubmitForm/steps.module.scss
@@ -21,7 +21,7 @@
     justify-content: center;
     grid-area: number;
     font-weight: var(--font-weight-bold);
-    background: var(--violet-4);
+    background: var(--mauve-4);
     border-radius: var(--radius-full);
     width: 40px;
     height: 40px;
@@ -34,7 +34,7 @@
     justify-self: center;
     width: 3px;
     height: 100%;
-    background: var(--violet-4);
+    background: var(--mauve-4);
   }
 }
 
