--- a/src/pages/new/index.astro
+++ b/src/pages/new/index.astro
@@ -4,10 +4,7 @@ import { SubmitForm } from "../../components/SubmitForm/SubmitForm";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout
-  title="Add a cover"
-  description="Have a good genderswapped cover? Add it here."
->
+<BaseLayout title="Submit a cover · Genderswap.fm">
   <Container>
     <SubmitForm client:load />
   </Container>
