--- a/src/components/SubmitForm/songSelect.module.scss
+++ b/src/components/SubmitForm/songSelect.module.scss
@@ -1,6 +1,6 @@
 // Selected Song
 .selectedSong {
-  background: var(--violet-3);
+  background: var(--mauve-3);
   border-radius: var(--radius-l);
   padding: var(--space-s);
   display: flex;
@@ -39,10 +39,10 @@
   border-radius: var(--radius-full);
   cursor: pointer;
   line-height: 0;
-  color: var(--violet-11);
+  color: var(--mauve-11);
 
   &:hover {
-    background: var(--violet-4);
+    background: var(--mauve-4);
   }
 }
 
@@ -63,19 +63,20 @@
   top: 50%;
   transform: translateY(-50%);
   left: var(--space-m);
+  fill: currentColor;
 }
 
 .searchInput {
   border: none;
   width: 100%;
-  background: var(--violet-3);
+  background: var(--mauve-3);
   border-radius: var(--radius-full);
   padding-block: var(--space-s);
   padding-inline: var(--space-m);
   padding-left: calc(24px + var(--space-m) + var(--space-s));
 
   &::placeholder {
-    color: var(--violet-a7);
+    color: var(--mauve-8);
   }
 
   &:focus {
@@ -91,7 +92,7 @@
   right: 0;
   margin-top: var(--space-s);
   overflow-y: scroll;
-  background-color: var(--violet-3);
+  background-color: var(--mauve-3);
   border-radius: var(--radius-m);
   box-shadow:
     0px 10px 38px -10px rgba(22, 23, 24, 0.35),
@@ -108,7 +109,7 @@
 
 .result {
   line-height: 1;
-  color: var(--violet-12);
+  color: var(--mauve-12);
   border-radius: var(--radius-s);
   padding: var(--space-xs);
   position: relative;
@@ -120,7 +121,7 @@
 
   &.highlighted {
     outline: none;
-    background-color: var(--violet-5);
+    background-color: var(--mauve-5);
   }
 }
 
@@ -134,7 +135,7 @@
 .resultAlbum {
   width: 60px;
   height: 60px;
-  background: var(--violet-3);
+  background: var(--mauve-3);
   border-radius: var(--radius-xs);
 }
 
