--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -24,11 +24,8 @@
 :root {
   /* Font families */
   --font-display: swear-display, serif;
-  --font-sans: system-ui, -apple-system, "Segoe UI", roboto, "Helvetica Neue",
-    sans-serif, serif;
-  --font-mono: ui-monospace, menlo, monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --font-sans: indivisible, system-ui, -apple-system, "Segoe UI", roboto,
+    "Helvetica Neue", sans-serif, serif;
 
   /* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,22,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
   --step--1: clamp(0.8331rem, 0.7642rem + 0.3446vw, 1.0313rem);
@@ -38,7 +35,6 @@
   --step-3: clamp(1.7281rem, 1.1964rem + 2.6587vw, 3.2569rem);
   --step-4: clamp(2.0738rem, 1.2851rem + 3.9435vw, 4.3412rem);
   --step-5: clamp(2.4881rem, 1.3407rem + 5.737vw, 5.7869rem);
-  --step-6: clamp(2.9863rem, 1.3417rem + 8.2228vw, 7.7144rem);
 
   /* @link https://utopia.fyi/space/calculator?c=320,8,1.2,1240,12,1.333,6,2,&s=0.75|0.5,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
   --space-2xs: clamp(0.25rem, 0.2065rem + 0.2174vw, 0.375rem);
@@ -54,7 +50,7 @@
   --line-height-h1: 1;
   --line-height-h2: 1.1;
   --line-height-h3: 1.2;
-  --line-height-body: 1.5;
+  --line-height-body: 1.4;
   --line-height-small: 1.4;
 
   /* Letter spacing */
@@ -71,5 +67,5 @@
 
   /* Font weights */
   --font-weight-normal: 400;
-  --font-weight-bold: 700;
+  --font-weight-bold: 600;
 }
